Added pattern-field, small fixes, added links

--- a/PatternScanner/PatternScanner.csproj
+++ b/PatternScanner/PatternScanner.csproj
@@ -64,6 +64,7 @@
     <Compile Include="DTO\CodeByte.cs" />
     <Compile Include="DTO\CodeRow.cs" />
     <Compile Include="DTO\CodeText.cs" />
+    <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Parsing\CEParser.cs" />
     <Compile Include="Parsing\HexParser.cs" />
     <Compile Include="Parsing\ICodeParser.cs" />
