--- a/PatternScanner/packages.config
+++ b/PatternScanner/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net461" />
   <package id="PeNet" version="0.9.0-alpha" targetFramework="net461" />
   <package id="PeNet.Asn1" version="1.3.2" targetFramework="net461" />
   <package id="System.Security.Cryptography.Pkcs" version="4.5.1" targetFramework="net461" />
